# MLOpsNetworkSecurity

./: .gitignore  Dockerfile  README.md  app.py  main.py  push_data.py  pyproject.toml  setup.py  test.ipynb
.github/workflows/: pipeline.yaml
artifacts/10_28_2024/data_ingestion/ingested/: test.csv  train.csv
artifacts/10_29_2024/data_ingestion/ingested/: test.csv  train.csv
artifacts/10_29_2024/data_transformation/transformed/: test.npy  train.npy
artifacts/10_29_2024/data_transformation/transformed_object/: preprocessing.pkl
artifacts/10_29_2024/data_validation/drift_report/: report.yaml
artifacts/10_29_2024/data_validation/validated/: test.csv  train.csv
artifacts/10_29_2024/model_trainer/trained_model/: model.pkl
final_model/: model.pkl  preprocessor.pkl
mlruns/0/: meta.yaml
mlruns/0/4254a21e9bad476f9232f8cba12c2db3/: meta.yaml
mlruns/0/4254a21e9bad476f9232f8cba12c2db3/metrics/: f1_score  precision_score  recall_score
mlruns/0/4254a21e9bad476f9232f8cba12c2db3/tags/: mlflow.log-model.history  (+2 more)
pipeline/: __init__.py  training_pipeline.py
src/networksecurity/: __init__.py
src/networksecurity/cloud/: __init__.py  s3_sync.py
src/networksecurity/components/: __init__.py  data_ingestion.py  data_transformation.py  data_validation.py  mode_trainer.py
src/networksecurity/constants/: __init__.py
src/networksecurity/entity/: __init__.py  artifact_entity.py  config_entity.py
src/networksecurity/exception/: NSException.py  __init__.py
src/networksecurity/loggings/: NSlogger.py  __init__.py
src/networksecurity/utils/: __init__.py
(+5 files in other folders)
