[project]
name = "NetworkSecurity"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "python-dotenv>=1.0.1",
    "pandas>=2.2.3",
    "numpy>=2.1.2",
    "pymongo>=4.10.1",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
